torrent/services.yml
apiVersion: v1
kind: Service
metadata:
  name:  readarr
  namespace: default
  labels:
    app.kubernetes.io/name: readarr
spec:
  selector:
    app.kubernetes.io/name: readarr
  type:  ClusterIP
  ports:
  - name:  http
    port:  8787
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name:  radarr
  namespace: default
  labels:
    app.kubernetes.io/name: radarr
spec:
  selector:
    app.kubernetes.io/name: radarr
  type:  ClusterIP
  ports:
  - name:  http
    port:  7878
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name:  sonarr-anime
  namespace: default
  labels:
    app.kubernetes.io/name: sonarr-anime
spec:
  selector:
    app.kubernetes.io/name: sonarr-anime
  type:  ClusterIP
  ports:
  - name:  http
    port:  8989
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name:  sonarr-series
  namespace: default
  labels:
    app.kubernetes.io/name: sonarr-series
spec:
  selector:
    app.kubernetes.io/name: sonarr-series
  type:  ClusterIP
  ports:
  - name:  http
    port:  8989
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name:  prowlarr
  namespace: default
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  selector:
    app.kubernetes.io/name: prowlarr
  type:  ClusterIP
  ports:
  - name:  http
    port:  9696
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name:  qbittorrent
  namespace: default
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
  type:  ClusterIP
  ports:
  - protocol: TCP
    name: http
    port: 8080  
  - protocol: TCP
    name: torrent-tcp
    port: 8999
  - protocol: UDP
    name: torrents-udp
    port: 8999
