torrent/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: default
spec:
  rules:
  - host: "tracker.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr 
            port:
              number: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: default
spec:
  rules:
  - host: "torrent.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent 
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: default
spec:
  rules:
  - host: "movies.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr 
            port:
              number: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
  namespace: default
spec:
  rules:
  - host: "books.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: readarr 
            port:
              number: 8787
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-anime
  namespace: default
spec:
  rules:
  - host: "anime.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-anime 
            port:
              number: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-series
  namespace: default
spec:
  rules:
  - host: "series.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-series 
            port:
              number: 8989
